<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@android:color/background_light"
    tools:context="com.example.hp.healthcare.MainActivity2"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="181dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        app:srcCompat="@drawable/im"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/em1"
        app:layout_constraintRight_toRightOf="@+id/em1"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/em1"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginTop="167dp"
        android:drawableLeft="@mipmap/mail"
        android:ems="10"
        android:hint="Email or username"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/pass"
        app:layout_constraintRight_toRightOf="@+id/pass"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,RtlHardcoded"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="74dp"
        android:layout_marginStart="45dp"
        android:drawableLeft="@mipmap/pwd"
        android:ems="10"
        android:hint="@string/User_password"
        android:inputType="textPassword"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="49dp"
        app:layout_constraintTop_toBottomOf="@+id/em1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/b2"
        android:layout_width="99dp"
        android:layout_height="53dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/redbutton"
        android:text="@string/create_account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/b3"
        app:layout_constraintLeft_toLeftOf="@+id/pass"
        app:layout_constraintTop_toTopOf="@+id/b3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteY="393dp" />

    <Button
        android:id="@+id/b3"
        android:layout_width="90dp"
        android:layout_height="52dp"
        android:layout_marginEnd="67dp"
        android:layout_marginTop="38dp"
        android:background="@drawable/redbutton"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
